# Scraperv2

./: .gitignore  SCRAPER_README.md  docker-compose.yml  press_releases.json  pyproject.toml  test_db.py
best_scrape_v1/: Dockerfile  README.md  api.py  domain_registry.py  open_challenges.txt  requirements.txt  scraper.py  scraper_text.json
usao_ct_scraper/: base_spider.py  config.py  models.py  press_releases.json  pyproject.toml  scraper.py  spider.py
